@@ -94,8 +94,8 @@ class ClinicServiceTests {
 		Owner owner = this.owners.findById(1);
 		assertThat(owner.getLastName()).startsWith("Franklin");
 		assertThat(owner.getPets()).hasSize(1);
-		assertThat(owner.getPets().get(0).getType()).isNotNull();
-		assertThat(owner.getPets().get(0).getType().getName()).isEqualTo("cat");
+		assertThat(owner.getPets().getFirst().getType()).isNotNull();
+		assertThat(owner.getPets().getFirst().getType().getName()).isEqualTo("cat");
 	}
 
 	@Test
